# template

./: .gitignore  CLAUDE.md  README.md  TEMPLATE.md  package.json  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yml  release.yml
assets/: logo-design.md
docs/: DESIGN.md  FEATURE.md  ROADMAP.md
docs/guides/: cli-entrypoints.md  cli-typer.md  database.md  desktop-run.md  first-run.md  rust-toolchain.md  tauri-icons.md  uv-toolchain.md
scripts/: build.py  publish.py  template.py
template/: __init__.py
template/cli/: __main__.py
template/cli/commands/: chat.py  logs.py  start.py  stats.py  status.py  stop.py
template/cli/core/: batch.py  context.py  once.py  render.py  repl.py
template/sdk/: __init__.py  _adapters.py  chat.py  client.py  discover.py  streams.py
template/server/: __main__.py  agent.py  app.py
template/server/controller/: __init__.py  dataplane.py  errors.py  logs.py  runtime.py  stats.py
template/server/database/: models.py  session.py
template/server/database/migrations/: 001_init.sql
template/server/model/: __init__.py  base.py  mock.py
template/server/repository/: __init__.py  log.py
template/server/runtime/: __init__.py  endpoint.py  lockfile.py  logger.py  watcher.py
template/server/service/: __init__.py  exceptions.py  log_writer.py
template/shared/: protocols.py
tests/: conftest.py  test_smoke.py
tests/cli/: test_commands.py
tests/sdk/: test_client_admin.py  test_discover.py
tests/server/: conftest.py  test_admin.py  test_agent.py  test_dataplane.py  test_model_mock.py
