[project]
name = "template-proxy"
version = "0.1.0"
description = "本地跑的 LLM API 格式转换中枢(Claude / OpenAI Chat Completions / OpenAI Responses 三格式互译)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "lianaipeng" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "httpx>=0.28",
    "psutil>=6.0",
    "typer>=0.13",
]

[project.scripts]
template = "template.cli.__main__:main"
template-server = "template.server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["template"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
build = [
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: 真启动子进程 / 访问外部服务的集成测试(--integration 才跑)",
]

[tool.pyright]
pythonVersion = "3.12"